# mlta-turing-machine

./: CMakeLists.txt  Dockerfile  README.md  install.sh
example-input/: add.yaml  invert.yaml  tape.txt  tape_one_num.txt  zero.yaml
include/: config.hpp  interpreter.hpp  parser.hpp
src/: config.cpp  interpreter.cpp  main.cpp  parser.cpp
